--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,16 +35,18 @@
 
 /* User Input Area  */
 #task-input{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 label, input{
-    padding-right: 10vh;
+  padding-right: 10vh;
 } 
 #task-submit{
   margin-left: 5vh;
 }
-
+input{
+  padding: 2vh;
+}
 label, input, #task-submit {
   font-family: monospace;
   font-weight: 500;
@@ -54,7 +56,22 @@ label, input, #task-submit {
   border: 1px solid rgb(160, 158, 151);
   padding: 2vh;
   border-radius: 4px;
-  box-shadow: 4px 4px rgb(54, 54, 52);
+  box-shadow: 0 4px rgb(54, 54, 52);
   font-weight: bold;
   cursor: pointer;
+  transition: all 0.2s;
+}
+#task-submit:active{
+  box-shadow: none;
+  transform: translateY(4px);
+}
+/* list container */
+.list-container{
+  width: 100%;
+  height: 50vh;
+  
+}
+li{
+  font-size: 150%;
+  color: #333;
 }
