--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,5 +75,73 @@ label, input, #task-submit {
 li{
   font-size: 150%;
   color: #333;
+}
 
+/* Modal Styling */
+
+#open-modal{
+  padding: 2vh;
+  margin:2vh;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 125%;
+  cursor: pointer;
+  background-color:white ;
+  color: #333;
+  border-radius:10px;
+  box-shadow: 0px 5px #333333b2;
+  border: 1px solid #333333b2;
+}
+#open-modal:active{
+  box-shadow: none;
+  transform: translateY(5px);
+}
+#modal{
+  position: fixed;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index:99;
+  transition:200ms ease-in-out;
+  height: 50vh; 
+  width:60vh;
+  max-width:80vh;
+  border: 1px solid #333333b2;
+  background-color: white;
+}
+#modal.active{
+  transform: translate(-50%, -50%) scale(1);
+}
+#modal-header{
+  display: flex;
+  justify-content: space-between;
+  padding: 2vh;
+  border-bottom:1px solid #333333b2;
+}
+#modal-title, #close-modal{
+  font-size: 150%;
+  font-family: monospace;
+  font-weight: bold;
+}
+#close-modal{
+  background:none;
+  cursor: pointer;
+}
+#modal-body{
+  padding:2vh;
+}
+#overlay{
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top:0;
+  left:0;
+  bottom:0;
+  right: 0;
+  background: #333333b2;
+  pointer-events: none;
+}
+#overlay.active{
+  opacity: 1;
+  pointer-events: all;
 }
