--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ label, input, #task-submit {
   transform: translateY(4px);
 }
 /* list container */
+
 .list-container{
   width: 100%;
   height: 50vh;
@@ -79,7 +80,7 @@ li{
 
 /* Modal Styling */
 
-#open-modal{
+#open-modal, #change-theme{
   padding: 2vh;
   margin:2vh;
   font-family: monospace;
