--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,14 @@ header{
   justify-content: space-around;
 }
 #date-header{
-    height: 15vh;
-    width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 200%;
-    margin-bottom: 5vh;
     color: #333;
+    font-family: monospace;
+    text-transform: uppercase;
 }
 #auto-container{
     height: 5vh;
@@ -83,7 +83,7 @@ label, input, #task-submit {
 
 li{
   font-size: 150%;
-  color: #0e0d0dc2;
+  color: rgba(68, 68, 68, 0.761);
 }
 
 /* Modal Styling */
