--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body{
 header{
   display: flex;
   justify-content: space-around;
+  margin-top: 5vh;
 }
 #date-header{
     height: 10vh;
@@ -21,11 +22,12 @@ header{
     text-transform: uppercase;
 }
 #auto-container{
-    height: 5vh;
+    height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 5vh;
+    font-size: 200%;
 }
 
 
@@ -75,15 +77,27 @@ label, input, #task-submit {
 }
 /* list container */
 
-.list-container{
+#list{
   width: 100%;
   height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-container{
+  width: 50%;
+  height: 90%;
   
 }
 
 li{
-  font-size: 150%;
-  color: rgba(68, 68, 68, 0.761);
+  font-size: 125%;
+  padding: 1vh;
+  margin: 1vh;
+  border: 1px solid rgb(51, 51, 51);
+  border-radius: 10px;
+  list-style: none;
+  font-family: monospace;
 }
 
 /* Modal Styling */
