--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,3 +174,14 @@ li{
   opacity: 1;
   pointer-events: all;
 }
+
+/* inside modal styling */
+
+#step-one{
+  width:100%;
+  height: 10%;
+  font-family: monospace;
+  padding-bottom: 1%;
+  border-bottom: 1px solid #333333b2;
+  margin-bottom:1%;
+}
