--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,8 @@ label, input, #task-submit {
   font-weight: bold;
   cursor: pointer;
   transition: all 0.2s;
+  text-transform: uppercase;
+  letter-spacing: 0.25vw;
 }
 #task-submit:active{
   box-shadow: none;
