--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,12 @@ li{
 #modal-body{
   padding:2vh;
 }
+.instructions{
+  font-size: 125%;
+  font-family: monospace;
+  line-height: 1.25rem;
+  margin-bottom: 2vh;
+}
 #overlay{
   position: fixed;
   opacity: 0;
@@ -181,11 +187,10 @@ li{
 
 /* inside modal styling */
 
-#step-one{
+.modal-steps{
   width:100%;
   height: 10%;
   font-family: monospace;
   padding-bottom: 1%;
-  border-bottom: 1px solid #333333b2;
   margin-bottom:1%;
 }
