--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,9 +136,8 @@ li{
   transform: translate(-50%, -50%) scale(0);
   z-index:99;
   transition:200ms ease-in-out;
-  height: 50vh; 
-  width:60vh;
-  max-width:80vh;
+  height: 75vh; 
+  width:60vw;
   border: 1px solid #333333b2;
   background-color: white;
 }
@@ -192,5 +191,4 @@ li{
   width:100%;
   height: 10%;
   font-family: monospace;
-  
 }
