--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body{
   margin:2vh;
   background-color: rgb(250, 249, 246);
 }
+/* header styling  */
 header{
   display: flex;
   justify-content: space-around;
