--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ header{
   padding-bottom: 2.5vh;
   border-bottom: 2px solid #333;
 }
+/* Styling For Date Display */
 #date-header{
   height: 10vh;
   display: flex;
@@ -24,25 +25,106 @@ header{
   font-family: monospace;
   text-transform: uppercase;
 }
+/* Generated text area */
 #auto-container{
-    height: 40vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2.5vh;
-    font-size: 200%;
-    border-bottom: 2px solid #333;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2.5vh;
+  font-size: 200%;
+  border-bottom: 2px solid #333;
 }
 .typed-text {
-    color: #333;
-    font-family: monospace;
-    font-size: 200%;
-  }
-  
+  color: #333;
+  font-family: monospace;
+  font-size: 200%;
+}
 .cursor {
-    background: #333;
+  background: #333;
+}
+/* Modal Styling */
+#open-modal, #change-theme{
+  padding: 2vh;
+  margin:2vh;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 125%;
+  cursor: pointer;
+  background-color:white ;
+  color: #333;
+  border-radius:10px;
+  box-shadow: 0px 5px #333333b2;
+  border: 1px solid #333333b2;
+  text-transform: uppercase;
+  letter-spacing: 0.25vw;
+}
+#open-modal:active, #change-theme:active{
+  box-shadow: none;
+  transform: translateY(5px);
   }
-
+#modal{
+  position: fixed;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index:99;
+  transition:200ms ease-in-out;
+  height: 50vh; 
+  width:60vw;
+  border: 1px solid #333333b2;
+  background-color: white;
+}
+#modal.active{
+  transform: translate(-50%, -50%) scale(1);
+}
+#modal-header{
+  display: flex;
+  justify-content: space-between;
+  padding: 2vh;
+  border-bottom:1px solid #333333b2;
+}
+#modal-title, #close-modal{
+  font-size: 150%;
+  font-family: monospace;
+  font-weight: bold;
+}
+#close-modal{
+  background:none;
+  cursor: pointer;
+  }
+#modal-body{
+  padding:2vh;
+  height: 100%;
+}
+.instructions{
+  font-size: 125%;
+  font-family: monospace;
+  line-height: 1.25rem;
+  margin-bottom: 2vh;
+}
+/* Modal OverLay */
+#overlay{
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top:0;
+  left:0;
+  bottom:0;
+  right: 0;
+  background: #333333b2;
+  pointer-events: none;
+}
+#overlay.active{
+  opacity: 1;
+  pointer-events: all;
+}
+  /* inside modal styling */
+.modal-steps{
+  width:100%;
+  height: 10%;
+  font-family: monospace;
+  }
 /* User Input Area  */
 #task-input{
   display: flex;
@@ -103,84 +185,4 @@ li{
   font-family: monospace;
   background-color: rgb(250, 249, 246);
 }
-/* Modal Styling */
-#open-modal, #change-theme{
-  padding: 2vh;
-  margin:2vh;
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 125%;
-  cursor: pointer;
-  background-color:white ;
-  color: #333;
-  border-radius:10px;
-  box-shadow: 0px 5px #333333b2;
-  border: 1px solid #333333b2;
-  text-transform: uppercase;
-  letter-spacing: 0.25vw;
-}
-#open-modal:active, #change-theme:active{
-  box-shadow: none;
-  transform: translateY(5px);
-}
-#modal{
-  position: fixed;
-  left:50%;
-  top:50%;
-  transform: translate(-50%, -50%) scale(0);
-  z-index:99;
-  transition:200ms ease-in-out;
-  height: 50vh; 
-  width:60vw;
-  border: 1px solid #333333b2;
-  background-color: white;
-}
-#modal.active{
-  transform: translate(-50%, -50%) scale(1);
-}
-#modal-header{
-  display: flex;
-  justify-content: space-between;
-  padding: 2vh;
-  border-bottom:1px solid #333333b2;
-}
-#modal-title, #close-modal{
-  font-size: 150%;
-  font-family: monospace;
-  font-weight: bold;
-}
-#close-modal{
-  background:none;
-  cursor: pointer;
-}
-#modal-body{
-  padding:2vh;
-  height: 100%;
-}
-.instructions{
-  font-size: 125%;
-  font-family: monospace;
-  line-height: 1.25rem;
-  margin-bottom: 2vh;
-}
-#overlay{
-  position: fixed;
-  opacity: 0;
-  transition: 200ms ease-in-out;
-  top:0;
-  left:0;
-  bottom:0;
-  right: 0;
-  background: #333333b2;
-  pointer-events: none;
-}
-#overlay.active{
-  opacity: 1;
-  pointer-events: all;
-}
-/* inside modal styling */
-.modal-steps{
-  width:100%;
-  height: 10%;
-  font-family: monospace;
-}
+
