--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,4 +185,35 @@ li{
   font-family: monospace;
   background-color: rgb(250, 249, 246);
 }
-
+/* Media Queries */
+@media screen and (max-width: 962px){
+ /* User Input Area */
+  form{
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  label, input {
+    padding-right: 0vh;
+  }
+  input{
+    text-align: center;
+  }
+  #task-submit{
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 760px){
+  /* Page Header */
+  #date-header{
+    order: 1;
+  }
+  header {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    padding-bottom: 2.5vh;
+    border-bottom: 2px solid #333;
+}
+}
