--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,7 @@ li{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
   }
   label, input {
     padding-right: 0vh;
